Added some more utilities

--- a/TextUtilityApp/templates/index.html
+++ b/TextUtilityApp/templates/index.html
@@ -18,6 +18,7 @@
                             <button type="submit" class="btn btn-primary" onclick='setType("removePunch")'>Remove Punctuations</button>
                             <button type="submit" class="btn btn-primary" onclick='setType("upperCase")'>Convert UpperCase</button>
                             <button type="submit" class="btn btn-primary" onclick='setType("beautifyData")'>Beautify Data</button>
+                            <button type="submit" class="btn btn-primary" onclick='setType("lowerCase")'>Convert LowerCase</button>
                         </form>
                     </div>
                 </div>
